# FaceScan

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
backend/: CMakeLists.txt  CMakePresets.json  vcpkg.json
backend/config/: app.example.json
backend/src/: main.cpp
backend/src/FaceScanBackend/: main.cpp
backend/src/FaceScanCamera/: camera_manager.hpp  hikvision_camera.cpp  hikvision_camera.hpp  multi_camera_device.hpp  vendor_camera.hpp
backend/src/FaceScanConfig/: app_config.hpp
backend/src/FaceScanDatabase/: database.hpp
backend/src/FaceScanReconstruction/: color_point_cloud_sdk.cpp  color_point_cloud_sdk.hpp  point_cloud_editor.cpp  point_cloud_editor.hpp
backend/src/FaceScanService/: app.cpp  app.hpp  http_server.cpp  http_server.hpp
backend/src/algorithm/: color_point_cloud_sdk.cpp  color_point_cloud_sdk.hpp  point_cloud_editor.cpp  point_cloud_editor.hpp
backend/src/api/: app.cpp  app.hpp
backend/src/camera/: camera_manager.cpp  camera_manager.hpp  mindvision_camera.cpp  mindvision_camera.hpp  multi_camera_device.cpp  multi_camera_device.hpp  orbbec_multi_camera.cpp  orbbec_multi_camera.hpp  vendor_camera.cpp  vendor_camera.hpp
backend/src/common/: bmp_utils.cpp  bmp_utils.hpp  file_utils.cpp  file_utils.hpp  json_utils.cpp  json_utils.hpp  models.hpp  module_api.hpp  time_utils.cpp  time_utils.hpp
backend/src/config/: app_config.cpp  app_config.hpp
backend/src/database/: database.cpp  database.hpp
backend/src/server/: http_server.cpp  http_server.hpp
backend/tests/: app_test.cpp  bmp_utils_test.cpp  camera_manager_test.cpp  color_point_cloud_sdk_test.cpp  database_test.cpp  json_utils_test.cpp  point_cloud_editor_test.cpp  test_utils.hpp
config/: app.example.json
docs/: 记录.md  项目接手指南.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: FormPanel.vue  LogoMark.vue  StepHeader.vue  WindowIcons.vue
frontend/src/router/: index.ts
frontend/src/stores/: patients.ts
frontend/src/types/: index.ts
frontend/src/views/: BasicInfoView.vue  BrowseView.vue  LoginView.vue  PointCloudView.vue  SendView.vue  SettingsView.vue  ShootView.vue
scripts/: deduplicate-orders.sh  dev.sh  stop-dev.sh
scripts/macos/: deduplicate-orders.sh  dev.sh  stop-dev.sh
scripts/windows/: dev.cmd  dev.ps1  stop-dev.cmd  stop-dev.ps1
